traversal.snake.Snake.scala.error
Erreur de compilation :
Snake:5: error: not found: value &&
    if (estFaceMur == true) && (getDirection() == Direction.EST) {
                            ^Snake:7: error: not found: value &&
      if (estFaceMur == true) && (getDirection() == Direction.NORD) {
                              ^Snake:8: warning: a pure expression does nothing in statement position; you may be omitting necessary parentheses
        return true
               ^Snake:8: warning: enclosing method fonctionTest has result type Unit: return value discarded
        return true
        ^Snake:13: error: not found: value &&
    if (estFaceMur == true) && (getDirection() == Direction.OUEST) {
                            ^Snake:15: error: not found: value &&
      if (estFaceMur == true) && (getDirection() == Direction.NORD) {
                              ^Snake:16: warning: a pure expression does nothing in statement position; you may be omitting necessary parentheses
        return true
               ^Snake:16: warning: enclosing method fonctionTest has result type Unit: return value discarded
        return true
        ^Snake:20: warning: a pure expression does nothing in statement position; you may be omitting necessary parentheses
    return false
           ^Snake:20: warning: enclosing method fonctionTest has result type Unit: return value discarded
    return false
    ^Snake:24: error: value unary_! is not a member of Unit
  while (!fonctionTest()) {
         ^